src/main/java/com/example/itss/util/error/ValidInforException.java
package com.example.itss.util.error;

public class ValidInforException extends Exception {
    public ValidInforException(String message) {
        super(message);
    }
}
